--- a/2.html
+++ b/2.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - New York Mets</title>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="FdX1vDQ97E38SgVswLK2m00gOEx2K5hhNvCia-epIFs" />
 </head>
 <body>
   <h1><a href="index.html">내가 좋아하는 팀, New York Mets</a></h1>
