--- a/1-1.html
+++ b/1-1.html
@@ -20,10 +20,36 @@
         target.style.backgroundColor = 'black';
         target.style.color = 'white';
         this.value = 'day';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0
+        while(i < alist.length){
+        alist[i].style.color = 'powderblue';
+        i = i + 1;
+        }
+        var ol = document.querySelector('ol');
+        ol.style.color = 'powderblue';
       } else {
         target.style.backgroundColor = 'white';
         target.style.color = 'black';
         this.value = 'night';
+
+        var alist = document.querySelectorAll('a');
+        var i = 0
+        while(i < alist.length){
+        alist[i].style.color = 'blue';
+        i = i + 1;
+        }
+        var h2 = document.querySelectorAll('.middle');
+        var i = 0
+        while(i < h2.length){
+        h2[i].style.color = 'coral';
+        i = i + 1;
+        }
+        var ol = document.querySelector('ol');
+        ol.style.color = 'coral';
+        document.querySelector('.head').style.color = 'purple';
+        document.querySelector('#now').style.color = '#ff5908';
       }
     ">
     <div id="grid">
