--- a/2.html
+++ b/2.html
@@ -1,34 +1,45 @@
 <!doctype html>
 <html>
-<head>
-  <title>WEB1 - New York Mets</title>
-  <meta charset="utf-8">
-  <meta name="google-site-verification" content="FdX1vDQ97E38SgVswLK2m00gOEx2K5hhNvCia-epIFs" />
-</head>
-<body>
-  <h1><a href="index.html">내가 좋아하는 팀, New York Mets</a></h1>
-  <ol>
-    <li><a href="1.html">Description</a></li>
-    <li><a href="2.html">Recent History</a></li>
-    <li><a href="3.html">Players</a></li>
-  </ol>
-  <h2>Recent History</h2>
-    <img src="Jacob_deGrom.jpg">
-    <p>On April 23, 2015 the Mets tied a franchise sea
-      son record of eleven straight wins. For the firs
-      t time in its history the Mets won ten straight h
-      omestand games, becoming the 7th team since 1900 t
-      o win at least 10 straight homestand games. On Sep
-      tember 26, 2015, the Mets clinched the NL East div
-      ision title, and thus their first postseason berth s
-      ince 2006, by defeating the Cincinnati Reds 10–2. T
-      hey defeated the Los Angeles Dodgers in the NLDS, t
-      hree games to two, and swept the Chicago Cubs in t
-      he NLCS for their first pennant in 15 years. In th
-      e 2015 World Series, they were defeated by the Kans
-      as City Royals in five games. After the season ende
-      d, pitcher Matt Harvey won the NL Comeback Player o
-      f the Year award. Outfielder Yoenis Céspedes won th
-      e NL Gold Glove award as a left fielder.</p>
-</body>
+  <head>
+    <title>WEB1 - New York Mets</title>
+    <meta charset="utf-8">
+    <meta name="google-site-verification" content="FdX1vDQ97E38SgVswLK2m00gOEx2K5hhNvCia-epIFs"/>
+    <link href="https://fonts.googleapis.com/css?family=Actor&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <style>
+      #read {
+        color:orange;
+      }
+    </style>
+  </head>
+  <body>
+    <h1><a href="index.html" class="head">내가 좋아하는 팀, New York Mets</a></h1>
+    <div id="grid">
+      <ol>
+        <li><h2><a href="1.html" class="middle head" id="read">Description</a></h2></li>
+        <li><h2><a href="2.html" class="middle head" id="now">Recent History</a></h2></li>
+        <li><h2><a href="3.html" class="middle head">Players</a></h2></li>
+      </ol>
+      <div id="main">
+        <h3>Recent History</h3>
+        <img src="Jacob_deGrom.jpg">
+        <p>On April 23, 2015 the Mets tied a franchise sea
+          son record of eleven straight wins. For the firs
+          t time in its history the Mets won ten straight h
+          omestand games, becoming the 7th team since 1900 t
+          o win at least 10 straight homestand games. On Sep
+          tember 26, 2015, the Mets clinched the NL East div
+          ision title, and thus their first postseason berth s
+          ince 2006, by defeating the Cincinnati Reds 10–2. T
+          hey defeated the Los Angeles Dodgers in the NLDS, t
+          hree games to two, and swept the Chicago Cubs in t
+          he NLCS for their first pennant in 15 years. In th
+          e 2015 World Series, they were defeated by the Kans
+          as City Royals in five games. After the season ende
+          d, pitcher Matt Harvey won the NL Comeback Player o
+          f the Year award. Outfielder Yoenis Céspedes won th
+          e NL Gold Glove award as a left fielder.</p>
+      </div>
+    </div>
+  </body>
 </html>
