--- a/3.html
+++ b/3.html
@@ -1,45 +1,55 @@
 <!doctype html>
 <html>
-<head>
-  <title>WEB1 - New York Mets</title>
-  <meta charset="utf-8">
-  <meta name="google-site-verification" content="FdX1vDQ97E38SgVswLK2m00gOEx2K5hhNvCia-epIFs" />
-</head>
-<body>
-  <h1><a href="index.html">내가 좋아하는 팀, New York Mets</a></h1>
-  <ol>
-    <li><a href="1.html">Description</a></li>
-    <li><a href="2.html">Recent History</a></li>
-    <li><a href="3.html">Players</a></li>
-  </ol>
-  <h2>Players</h2>
-  <ul>
-    <strong>Pitchers</strong>
-     <li>Jacob deGrom</li>
-     <li>Noah Syndergaard</li>
-     <li>Marcus Stroman</li>
-     <li>Rick Porcello</li>
-     <li>Steven Matz</li>
-     <li>Dellin Betances</li>
-     <li>Jeurys Familia</li>
-     <li>Michael Wacha</li>
-     <li>Seth Lugo</li>
-     <li>Robert Gsellman</li>
-     <li>Justin Wilson</li>
-     <li>Brad Brach</li>
-     <li>Edwin Diaz</li>
-    <strong>Batters</strong>
-     <li>Wilson Ramos</li>
-     <li>Tomas Nido</li>
-     <li>Pete Alonso</li>
-     <li>Robinson Cano</li>
-     <li>Jeff McNeil</li>
-     <li>Amed Rosario</li>
-     <li>Yoenis Cespedes</li>
-     <li>Michael Conforto</li>
-     <li>J.D.Davis</li>
-     <li>Jake Marisnick</li>
-     <li>Brandon Nimmo</li>
-
-</body>
+  <head>
+    <title>WEB1 - New York Mets</title>
+    <meta charset="utf-8">
+    <meta name="google-site-verification" content="FdX1vDQ97E38SgVswLK2m00gOEx2K5hhNvCia-epIFs"/>
+        <link href="https://fonts.googleapis.com/css?family=Actor&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+    <style>
+      .read {
+        color:orange;
+      }
+    </style>
+  </head>
+  <body>
+    <h1><a href="index.html" class="head">내가 좋아하는 팀, New York Mets</a></h1>
+    <div id="grid">
+      <ol>
+        <li class="number"><h2><a href="1.html" class= "middle head read">Description</a></h2></li>
+        <li class="number"><h2><a href="2.html" class="middle head read">Recent History</a></h2></li>
+        <li class="number"><h2><a href="3.html" class="middle head" id="now">Players</a></h2></li>
+      </ol>
+      <div id="main">
+        <h3>Players</h3>
+        <ul>
+          <p><strong>Pitchers</strong>
+           <li>Jacob deGrom</li>
+           <li>Noah Syndergaard</li>
+           <li>Marcus Stroman</li>
+           <li>Rick Porcello</li>
+           <li>Steven Matz</li>
+           <li>Dellin Betances</li>
+           <li>Jeurys Familia</li>
+           <li>Michael Wacha</li>
+           <li>Seth Lugo</li>
+           <li>Robert Gsellman</li>
+           <li>Justin Wilson</li>
+           <li>Brad Brach</li>
+           <li>Edwin Diaz</li></p>
+          <p><strong>Batters</strong>
+           <li>Wilson Ramos</li>
+           <li>Tomas Nido</li>
+           <li>Pete Alonso</li>
+           <li>Robinson Cano</li>
+           <li>Jeff McNeil</li>
+           <li>Amed Rosario</li>
+           <li>Yoenis Cespedes</li>
+           <li>Michael Conforto</li>
+           <li>J.D.Davis</li>
+           <li>Jake Marisnick</li>
+           <li>Brandon Nimmo</li></p>
+         </div>
+       </div>
+  </body>
 </html>
